--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -1,6 +1,6 @@
 .text-align-center {
     text-align: center;
     padding-top: 20px;
-    padding-left: 20%;
-    padding-right: 20%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
