--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -9,6 +9,9 @@
 
 <ion-content>
   <ion-list>
+    <ion-avatar *ngIf="contact.image">
+      <img [src]="contact.image"  />
+    </ion-avatar>
     <ion-item>
       <ion-label position="floating">First Name</ion-label>
       <ion-input type="text" [(ngModel)]="contact.firstName"></ion-input>
